<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <EditText
        android:id="@+id/orderFullfillInput"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="263dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/orderQuantityInput"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/orderNameInput"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/orderFullfilledByLabel"
        android:layout_width="162dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="261dp"
        android:background="#81C784"
        android:text="@string/order_fullfilledby"
        android:textColor="#FCE4EC"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/orderQuantityLabel"
        android:layout_width="162dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="188dp"
        android:background="#81C784"
        android:text="@string/order_quantity"
        android:textColor="#FCE4EC"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/orderNameLabel"
        android:layout_width="162dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="123dp"
        android:background="#81C784"
        android:text="@string/order_name"
        android:textColor="#FCE4EC"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/orderIDLabel"
        android:layout_width="162dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="52dp"
        android:background="#81C784"
        android:text="@string/customer_orderid"
        android:textColor="#FCE4EC"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/orderInput"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        tools:ignore="Autofill,LabelFor" />

</RelativeLayout>